@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.2-dev6";
+$GameVersionString = "p.2-dev7";
 
 //------------------------------------------------------------------------------
 
