@@ -1,6 +1,12 @@
 What's new?
 ===========
 
+Prototype 2-dev7
+----------------
+
+- Windows version only.
+- Limit CATs to two weapons.
+
 Prototype 2-dev6
 ----------------
 
